; ModuleID = '/home/carl/AnghaBench/disque/src/extr_aof.c_aofRewriteBufferReset.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_aof.c_aofRewriteBufferReset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@zfree = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @aofRewriteBufferReset() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %5 = call i32 @listRelease(i64 %4)
  br label %6

6:                                                ; preds = %3, %0
  %7 = call i64 (...) @listCreate()
  store i64 %7, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %9 = load i32, i32* @zfree, align 4
  %10 = call i32 @listSetFreeMethod(i64 %8, i32 %9)
  ret void
}

declare dso_local i32 @listRelease(i64) #1

declare dso_local i64 @listCreate(...) #1

declare dso_local i32 @listSetFreeMethod(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
